[project]
name = "Streamlit RAG Chatbot"
version = "0.1.0"
description = "A streamlit RAG chatbot boilerplate template"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.81.0",
    "pypdf2>=3.0.1",
    "streamlit-chat>=0.1.1",
    "streamlit>=1.45.1",
    "numpy>=2.2.6",
    "faiss-cpu",
    "python-docx>=1.1.2",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.17",
    "langchain-community>=0.3.24",
]
